manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pets-api
  name: pets-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pets-api
  template:
    metadata:
      labels:
        app: pets-api
    spec:
      containers:
      - image: muzafferjoya/pets-api:v1
        name: pets-api
        ports:
        - containerPort: 3000
