manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pets-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: pets-api
