manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pets-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: pets-api.tekdinext.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pets-service
            port:
              number: 80
  tls:
  - hosts:
    - pets-api.tekdinext.com
    secretName: pets-api-tls
